--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "q": "^1.0.1"
   },
   "devDependencies": {
+    "body-parser": "^1.9.0",
     "chai": "^1.9.1",
+    "connect-multiparty": "^1.2.5",
+    "cookie-parser": "^1.3.3",
     "mocha": "^1.21.4",
     "supertest": "^0.13.0"
   }
